--- a/index.html
+++ b/index.html
@@ -3,14 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>`Pensamento Computacional</title>
+    <title>PUMAPJL</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>SUPERNATURAL</h1>  
-  <p>Dois irmãos viajam pelo País caçando monstros, se nomes Dean e Sam Winchester. Criados por um pai caçador John Winchester e uma mãe ex-caçadora Mary Winchester, tanto John e Mary foram mortos pelo demônio chamado Azazel. Dean mata esse demônio, Sam vira um demônio por um curto período. Dean morre para um cão do inferno. Anjos tiram dean do inferno, Os irmãos conhecem os anjos, particularmente criam uma amizade com um deles, chamado Castiel, que ajuda eles a evitar o apocalipse.</p>
-</body>
+  <header class="cabecalho">
+<img class="logoimg" src="pumacbl.jpeg"> 
+<ul class="listacabecalho">
+    <li class="item"><a href="index.html">home</a></li>
+    <li class="item"><a href="redes.html">rede sociais</a></li>
+    <li class="item">letras</li>
+</ul>
+
+  </header>
+
+  <h1>arte e musica de pumapjl</h1>  
+  <p>Febre90 s é o nome do grupo formado pelo beatmaker SonoTWS, natural de Jundiaí-SP, e o MC carioca PumaPJL. Os dois já haviam trabalho juntos no EP “Naturalidade” (2020), primeiro lançamento solo de Puma, nas faixas “Intro” e “Aquelas Coisas” produzidas pelo próprio Sono.
+
+    “Sempre quis ter um grupo, uma dupla. Sempre quis produzir pensando tipo assim: vamos montar o conceito, vamos criar a parada e do zero”, explica o produtor SonoTWS. “Eu conheci o trampo do Sono pela internet, foi amor à primeira vista (risos). Desde quando fizemos aquelas pro Naturalidade EP. A gente já sabia que não terminaria ali a nossa jornada, sintonia sinistra”, comenta por sua vez o rapper da capital do Rio.
+    
+    </p>
+  <img src="puma1.jpeg" alt="computador com txto html">
+  <p>O primeiro single divulgado pela dupla foi a faixa “No Piscar dos Olhos”, lançado nesta sexta-feira (30) e tem participação da rapper Lis Mc. Além de compositora, ela também é poetisa e Mestre de Cerimônias da Roda Cultural da Zona Norte do RJ. Aos 23 anos, a artista da VTZstudio que é natural do Complexo da Penha no Rio de Janeiro, já participou do Brasil Grime Show e fez diversas participações ao lado de nomes como Chris, Vilão, C97 e Fell. Na rua, ela tem o EP “Infernal” lançado em 2019 e também vários hits como “Nike Air“, “Bad Bitch” e “Outro Patamar“.</p>
+  <img src="puma2.jpeg" alt="">
+  <p>Puma, 21, morador do Morro da Mangueira, faz parte da gravadora Covil da Bruxa, junto com outros artistas como Tárcis, Leall, VND, OG Britto e TOKIODK. Quase todos eles lançaram projetos próprios recentemente que são muito bons. O coletivo é um dos que mais chama atenção e cresce na cena atual, com uma pegada muito diferenciada. As inspirações do MC são os companheiros da Covil, além do clássico grupo Racionais MC’s. “Escuto desde que me entendo por gente, meu pai tem todos os CDs”, explica.
+    020146
+  </p>
+  <img src="puma3.png" alt="">
+<p> “A gente tem essa ideia de tentar chamar essas pessoas da época pra somar com a gente, tá ligado? A gente não quer fazer uma cópia, um resgate dos anos 90, mas a gente quer tentar pôr nossa originalidade. A brisa da letra também é tipo mostrar o lance mais cru mesmo, tá ligado? O Puma quis mostrar que o bagulho é mais cru. A ideia é essa, como o rap nacional dos anos 90 mesmo. A ideia é dura mesmo, tá ligado?”, explica SonoTWS.
+</p>
+
+  </body>
 </html>
-<img src="simples.webp" alt="">
-<img src="BobbyRufusPartners.jpg" alt="">
-<img src="simples1.webp" alt="">
