--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
    
     
     </p>
-  <img src="puma1.jpeg" alt="computador com txto html">
+  <img src="neymar2.webp" alt="">
   <p>
   <img src="puma2.jpeg" alt="">
   <p>
