--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
    
     
     </p>
-  <img src="neymar2.webp" alt="">
+  <img src="neymar2.jpg" alt="">
   <p>
   <img src="puma2.jpeg" alt="">
   <p>
