--- a/index.html
+++ b/index.html
@@ -17,15 +17,14 @@
 
   </header>
 
-  <h1>l</h1>  
+  <h1>Neymar ultrapassa Pelé em números de gols</h1>  
   <p>
-
-   
-    
+    Compare números de Neymar e Pelé na seleção brasileira. Neymar se tornou o maior artilheiro da seleção brasileira ao chegar aos 79 gols em jogos oficiais. De acordo com dados da Fifa, ele ultrapassou o número registrado por Pelé, que balançou as redes 77 vezes pelo Brasil.
+  
     </p>
   <img src="neymar2.jpg" alt="">
   <p>
-  <img src="puma2.jpeg" alt="">
+  <img src="neymar3.jpeg" alt="">
   <p>
   </p>
   <img src="puma3.png" alt="">
