--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     Compare números de Neymar e Pelé na seleção brasileira. Neymar se tornou o maior artilheiro da seleção brasileira ao chegar aos 79 gols em jogos oficiais. De acordo com dados da Fifa, ele ultrapassou o número registrado por Pelé, que balançou as redes 77 vezes pelo Brasil.
   
     </p>
-  <img src="neymar2.jpg" alt="">
+  <img class="Imagem2"  src="neymar2.jpg" alt="">
   <p>
   <img src="neymar3.jpeg" alt="">
   <p>
