--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
   <img class="Imagem2"  src="neymar2.jpg" alt="">
   <p> Neymar ganha premio de jogador mais delicia da Arabia Saudita, podendo se casar com até 9 mulheres</p>
   <img src="neymar3.jpeg" alt="">
-  <p>
-  </p>
+  <p> Neymar veio de uma familia humilde e se tornou um grande homem </p>
   <img src="neymar4.webp" alt="">
 <p> 
 </p>
