--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
   <img src="neymar3.jpeg" alt="">
   <p> Neymar veio de uma familia humilde e se tornou um grande homem </p>
   <img src="neymar4.webp" alt="">
-<p> 
-</p>
+<p> Neymar em 2016 nas Olimpiadas foi elogiado pelo maior jogador de todos os tempos, ele é Pelé</p>
 
   </body>
 </html>
