--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <header class="cabecalho">
 <img class="logoimg" src="neymar1.webp"> 
 <ul class="listacabecalho">
-    <li class="item"><a href="index.html"></a></li>
-    <li class="item"><a href="redes.html"></a></li>
-    <li class="item"></li>
+    <li class="item"><a href="index.html"></a>home</li>
+    <li class="item"><a href="novoindex.html"></a>CBF</li>
+    <li class="item"><a href=""></a></li>
 </ul>
 
   </header>
