--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <header class="cabecalho">
 <img class="logoimg" src="neymar1.webp"> 
 <ul class="listacabecalho">
-    <li class="item"><a href="index.html"></a>home</li>
-    <li class="item"><a href="novoindex.html"></a>CBF</li>
+    <li class="item"><a href="index.html">home</a></li>
+    <li class="item"><a href="novoindex.html">CBF</a></li>
     <li class="item"><a href=""></a></li>
 </ul>
 
