--- a/novoindex.html
+++ b/novoindex.html
@@ -2,8 +2,8 @@
     <header class="cabecalho">
   <img class="logoimg" src="neymar1.webp"> 
   <ul class="listacabecalho">
-      <li class="item"><a href="index.html"></a>home</li>
-      <li class="item"><a href="novoindex.html"></a>CBF</li>
+      <li class="item"><a href="index.html">home</a></li>
+      <li class="item"><a href="novoindex.html">CBF</a></li>
       <li class="item"><a href=""></a>Historia do Neymar</li>
   </ul>
   
