--- a/otroindex.html
+++ b/otroindex.html
@@ -3,7 +3,7 @@
   <img class="logoimg" src="neymar6.jpg"> 
   <ul class="listacabecalho">
       <li class="item"><a href="index.html">home</a></li>
-      <li class="item"><a href="otroindex.html"></a>Historia do Neymar</li>
+      <li class="item"><a href="otroindex.html">Historia do neymar</a></li>
   </ul>
   <h1>Biografia Neymar</h1>
   <p>Biografia de Neymar
